--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -9,6 +9,8 @@ html(lang="fr")
         link(rel="preconnect", href="https://fonts.gstatic.com", crossorigin)
         link(href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap", rel="stylesheet")
         link(rel="stylesheet", href="/static/index.css")
+
+        block scripts
     body
 
         nav
